--- a/css/responsive.css
+++ b/css/responsive.css
@@ -79,6 +79,15 @@
   section.adventure .adventure-text p {
     font-size: 16px;
   }
+  .swisscomparez {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  .bottom-footer ul.trem1 {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+  }
 }
 @media (max-width: 767px) {
   section.site-bnr .bnr-inner .bnr-text h1 {
@@ -91,6 +100,15 @@
 @media (max-width: 575px) {
   header.header .header-wrapper .header-inner .site-menu ul.navigation_link {
     width: 80%;
+  }
+  .bottom-footer ul.trem1 {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+  .bottom-footer ul.trem1 li a {
+    padding: 0px 0 18px 20px;
+    display: block;
   }
   section.site-bnr .bnr-inner .bnr-text h1 {
     font-size: 30px;
