--- a/css/responsive.css
+++ b/css/responsive.css
@@ -6,6 +6,9 @@
   section.site-bnr .bnr-inner .bnr-text {
     padding-top: 0px;
   }
+  header.header .header-wrapper .header-inner .site-menu ul li {
+    padding: 0 0px 0 0px;
+  }
 }
 @media (max-width: 991px) {
   header.header .header-wrapper .header-inner .toggle {
