--- a/scss/style.scss
+++ b/scss/style.scss
@@ -441,7 +441,7 @@ footer {
 // Hotel page
 
 section.site-bnr.hotels {
-    background: url(../images/hotel.avif)no-repeat;
+    background: url(../images/Hotel-banner.jpeg)no-repeat;
     background-size: cover;
     height: 500px;
     background-position: center;
@@ -547,7 +547,7 @@ section.hotels-wrapper .hotels-cards .hotels-text.one {
 
 // outdoor
 section.site-bnr.hotels.outdoor {
-    background: url(../images/outdoor.cms);
+    background: url(../images/Outdoor-banner.jpeg);
     background-position: center
 }
 
