--- a/css/style.css
+++ b/css/style.css
@@ -399,7 +399,7 @@ footer .footer-menu.contact ul li a.location::after {
 }
 
 section.site-bnr.hotels {
-  background: url(../images/hotel.avif) no-repeat;
+  background: url(../images/Hotel-banner.jpeg) no-repeat;
   background-size: cover;
   height: 500px;
   background-position: center;
@@ -487,7 +487,7 @@ section.hotels-wrapper .hotels-cards .hotels-text.one {
 }
 
 section.site-bnr.hotels.outdoor {
-  background: url(../images/outdoor.cms);
+  background: url(../images/Outdoor-banner.jpeg);
   background-position: center;
 }
 
