--- a/css/style.css
+++ b/css/style.css
@@ -478,7 +478,7 @@ section.hotels-wrapper .card-btn a:hover {
 }
 
 section.site-bnr.hotels.Retuarants {
-  background: url(../images/Retuarants.jpg);
+  background: url(../images/Restraunts-Banner.jpeg);
   background-position: center;
 }
 
