--- a/scss/style.scss
+++ b/scss/style.scss
@@ -537,7 +537,7 @@ section.hotels-wrapper {
 }
 
 section.site-bnr.hotels.Retuarants {
-    background: url(../images/Retuarants.jpg);
+    background: url(../images/Restraunts-Banner.jpeg);
     background-position: center;
 }
 
