--- a/scss/style.scss
+++ b/scss/style.scss
@@ -88,6 +88,7 @@ header.header {
     overflow: hidden;
     display: none;
 }
+
 .toggle span {
     position: absolute;
     width: 40px;
@@ -96,16 +97,19 @@ header.header {
     border-radius: 10px;
     transition: 0.3s;
 }
+
 .toggle span:nth-child(1) {
     transform: translateY(-15px);
     width: 25px;
     left: 15px;
 }
+
 .toggle.active span:nth-child(1) {
     width: 40px;
     transform: translateY(0) rotate(45deg);
     transition-delay: 0.125s;
 }
+
 .toggle span:nth-child(2) {
     transform: translateY(15px);
     width: 15px;
@@ -651,8 +655,15 @@ section.contact-detail {
         }
 
         .sozialen {
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+
             a {
                 color: #ffcd00;
+                border: 1px solid;
+                padding: 12px 50px;
+                text-transform: capitalize;
 
             }
 
