--- a/css/style.css
+++ b/css/style.css
@@ -477,8 +477,8 @@ section.hotels-wrapper .card-btn a:hover {
   background-color: #ffcd00;
 }
 
-section.site-bnr.hotels.Retuarants {
-  background: url(../images/Restraunts-Banner.jpeg);
+section.site-bnr.hotels.Restaurants {
+  background: url(../images/bnnn.jpeg);
   background-position: center;
 }
 
