--- a/scss/style.scss
+++ b/scss/style.scss
@@ -540,8 +540,8 @@ section.hotels-wrapper {
 
 }
 
-section.site-bnr.hotels.Retuarants {
-    background: url(../images/Restraunts-Banner.jpeg);
+section.site-bnr.hotels.Restaurants {
+    background: url(../images/bnnn.jpeg);
     background-position: center;
 }
 
