--- a/css/responsive.css
+++ b/css/responsive.css
@@ -91,6 +91,12 @@
     justify-content: center;
     margin: 0;
   }
+  section.adventure {
+    padding: 66px 0;
+  }
+  .footer-menu.one {
+    margin-top: 30px;
+  }
 }
 @media (max-width: 767px) {
   section.site-bnr .bnr-inner .bnr-text h1 {
