--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -8,6 +8,7 @@
     section.site-bnr .bnr-inner .bnr-text {
         padding-top: 0px;
     }
+
     header.header .header-wrapper .header-inner .site-menu ul li {
         padding: 0 0px 0 0px;
     }
@@ -116,11 +117,22 @@
         justify-content: center;
         margin: 0;
     }
-}   
+
+    section.adventure {
+
+        padding: 66px 0;
+    }
+
+    .footer-menu.one {
+        margin-top: 30px;
+    }
+}
+
 @media (max-width:767px) {
     section.site-bnr .bnr-inner .bnr-text h1 {
         font-size: 50px;
     }
+
     section.site-bnr.hotels .bnr-inner .bnr-text h1 {
         font-size: 30px;
     }
@@ -136,8 +148,9 @@
         align-items: center;
         flex-direction: column;
     }
+
     .bottom-footer ul.trem1 li a {
-      
+
         padding: 0px 0 18px 20px;
         display: block;
     }
@@ -150,6 +163,7 @@
         height: 400px;
         object-fit: cover;
     }
+
     section.site-bnr.hotels {
         height: 400px;
         object-fit: cover;
