--- a/css/style.css
+++ b/css/style.css
@@ -457,7 +457,7 @@ section.hotels-wrapper .hotelsimg-text h6 {
   font-size: 24px;
   font-weight: 700;
   margin-bottom: 20px;
-  color: #ffe165;
+  color: #ffcd00;
 }
 section.hotels-wrapper .hotelsimg-text h6 span {
   font-size: 18px;
@@ -585,6 +585,7 @@ section.contact-detail .kontaktdaten p {
 }
 section.contact-detail .kontaktdaten p a {
   color: #ffcd00;
+  font-weight: 700;
 }
 section.contact-detail .kontaktdaten .sozialen {
   display: flex;
@@ -596,6 +597,7 @@ section.contact-detail .kontaktdaten .sozialen a {
   border: 1px solid;
   padding: 12px 50px;
   text-transform: capitalize;
+  font-weight: 700;
 }
 section.contact-detail .kontaktdaten h5 {
   margin-top: 20px;
