--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -136,6 +136,10 @@
     section.site-bnr.hotels .bnr-inner .bnr-text h1 {
         font-size: 30px;
     }
+
+    a.instagram {
+        margin-top: 20px;
+    }
 }
 
 @media (max-width:575px) {
@@ -167,5 +171,11 @@
     section.site-bnr.hotels {
         height: 400px;
         object-fit: cover;
+    }
+}
+
+@media (max-width:362px) {
+    a.twitter {
+        margin-top: 20px;
     }
 }
