--- a/css/responsive.css
+++ b/css/responsive.css
@@ -133,6 +133,9 @@
     height: 400px;
     object-fit: cover;
   }
+  section.site-bnr.hotels.outdoor {
+    background-position: 30%, 0;
+  }
 }
 @media (max-width: 362px) {
   a.twitter {
