--- a/css/responsive.css
+++ b/css/responsive.css
@@ -97,6 +97,9 @@
   .footer-menu.one {
     margin-top: 30px;
   }
+  .wrapper-row-one .row .text-jung h3 {
+    margin-top: 20px;
+  }
 }
 @media (max-width: 767px) {
   section.site-bnr .bnr-inner .bnr-text h1 {
