--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -126,6 +126,10 @@
     .footer-menu.one {
         margin-top: 30px;
     }
+
+    .wrapper-row-one .row .text-jung h3 {
+        margin-top: 20px;
+    }
 }
 
 @media (max-width:767px) {
@@ -172,6 +176,7 @@
         height: 400px;
         object-fit: cover;
     }
+
     section.site-bnr.hotels.outdoor {
         background-position: 30%, 0;
     }
