--- a/scss/style.scss
+++ b/scss/style.scss
@@ -473,6 +473,10 @@ section.hotels-wrapper {
         .hotels-text {
             margin: 50px 0;
 
+            h3 {
+                margin-bottom: 20px;
+            }
+
             p {
 
                 color: #677F8B;
