--- a/css/style.css
+++ b/css/style.css
@@ -629,6 +629,7 @@ section.contact-detail .kontaktdaten .sozialen a:hover {
 }
 section.contact-detail .kontaktdaten h5 {
   margin-top: 20px;
+  font-weight: 600;
 }
 
 section.site-bnr.hotels.trem {
