--- a/scss/style.scss
+++ b/scss/style.scss
@@ -257,7 +257,7 @@ section.adventure {
 
     &::after {
         position: absolute;
-        background-color: $para-color;
+        background-color: #000000;
         content: '';
         inset: 0;
         height: 100%;
