--- a/css/style.css
+++ b/css/style.css
@@ -234,7 +234,7 @@ section.adventure {
 }
 section.adventure::after {
   position: absolute;
-  background-color: #2a2a2a;
+  background-color: #000000;
   content: "";
   inset: 0;
   height: 100%;
