--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -4,3 +4,9 @@ $primaryblack: #000;
 $para-color: #2a2a2a;
 $yellow: #ffe165;
 $social: #364a59;
+$color_1: #4070f4;
+$color_2: #333;
+$color_3: #fff;
+$background-color_1: #034bf1;
+$background-color_2: #fff;
+$background-color_3: #4070f4;
