--- a/css/style.css
+++ b/css/style.css
@@ -666,7 +666,7 @@ section.site-bnr.hotels.privacy {
   right: -370px;
   max-width: 345px;
   width: 100%;
-  background: #000;
+  background: #364a59;
   border-radius: 8px;
   padding: 15px 25px 22px;
   transition: right 0.3s ease;
@@ -726,22 +726,25 @@ header h2 {
   color: #fff;
   padding: 8px 0;
   border-radius: 4px;
-  background: #4070f4;
+  background: #ffcd00;
+  border: 1px solid transparent;
   cursor: pointer;
   width: calc(50% - 10px);
   transition: all 0.2s ease;
 }
 .buttons #acceptBtn:hover {
-  background-color: #034bf1;
+  background-color: #fff;
+  color: #000000;
 }
 
 #declineBtn {
   border: 2px solid #4070f4;
   background-color: #fff;
-  color: #4070f4;
+  color: #000;
+  border: 1px solid transparent;
 }
 #declineBtn:hover {
-  background-color: #4070f4;
+  background-color: #ffcd00;
   color: #fff;
 }
 
