--- a/scss/style.scss
+++ b/scss/style.scss
@@ -749,7 +749,7 @@ section.site-bnr.hotels.privacy {
     right: -370px;
     max-width: 345px;
     width: 100%;
-    background: #000;
+    background: #364a59;
     border-radius: 8px;
     padding: 15px 25px 22px;
     transition: right 0.3s ease;
@@ -824,7 +824,8 @@ header {
         color: $color_3;
         padding: 8px 0;
         border-radius: 4px;
-        background: #4070f4;
+        background: #ffcd00;
+        border: 1px solid transparent;
         cursor: pointer;
         width: calc(100% / 2 - 10px);
         transition: all 0.2s ease;
@@ -832,7 +833,8 @@ header {
 
     #acceptBtn {
         &:hover {
-            background-color: $background-color_1;
+            background-color: #fff;
+            color: #000000;
         }
     }
 }
@@ -840,10 +842,11 @@ header {
 #declineBtn {
     border: 2px solid #4070f4;
     background-color: $background-color_2;
-    color: $color_1;
+    color: #000;
+    border: 1px solid transparent;
 
     &:hover {
-        background-color: $background-color_3;
+        background-color: #ffcd00;
         color: $color_3;
     }
 }
