--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ header.header .header-wrapper .header-inner .site-menu ul li a:hover {
   color: #ffe165;
 }
 header.header .header-wrapper .header-inner .site-menu ul li a.active {
-  color: #ffe165;
+  color: #ffcd00;
 }
 
 .toggle {
