--- a/scss/style.scss
+++ b/scss/style.scss
@@ -65,7 +65,7 @@ header.header {
                             }
 
                             &.active {
-                                color: $yellow;
+                                color: #ffcd00;
                             }
                         }
                     }
