--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -56,7 +56,7 @@
 
 // gaming
 @mixin gamingbnr {
-    background: url(../images/Casino-banner.jpeg);
+    background: url(../images/sp2.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
