--- a/scss/style.scss
+++ b/scss/style.scss
@@ -474,19 +474,18 @@ section.site-bnr.hotels {
             h3 {
                 margin-bottom: 20px;
             }
-            
+            p {
+                color: #677F8B;
+                font-size: 18px;
+                font-weight: 400;
+                line-height: 1.8;
+                box-shadow: 0 0 7px rgb(255 225 101 / 80%);
+                padding: 20px;
+            }
         }
     }
 }
-
-.hotels-text p {
-    color: #677F8B;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 1.8;
-    box-shadow: 0 0 7px rgb(255 225 101 / 80%);
-    padding: 20px;
-}
+.hotels-text
 
 section.hotels-wrapper {
     padding: 0 0 60px 0;
